services/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd,authelia-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: homepage.completeautomate.com
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: homepage.homelab.local
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - homepage.completeautomate.com
    - homepage.homelab.local
